拼图增加金手指(开挂)

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -15,6 +15,7 @@
     <div id="game"></div>
     <div id="buttons">
         <button id="start">开始</button>
+        <button id="gm">金手指</button>
     </div>
 </body>
 <script src="./index.js"></script>
